--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
+        "moment": "^2.29.4",
         "popper.js": "^1.16.1"
     }
 }
